--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,16 +14,21 @@ layout: compress
   <body>
 
     {% include browser-upgrade.html %}
+    
+ 
     {% include masthead.html %}
-
+    
     {{ content }}
-
+   <p style="text-align: center"><a href='https://clustrmaps.com/site/1bi3v'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=wcLPh2Blr8RX5HbWZ1csEr0gKeAAVoZgdFMZcZPNLPg'/></a></p>
+   
     <div class="page__footer">
+   
       <footer>
         {% include footer/custom.html %}
         {% include footer.html %}
       </footer>
     </div>
+    
 
     {% include scripts.html %}
 
