--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -72,8 +72,9 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
-  height: 36px;
+  width: 50px;
+  // set width only, for non-square avatars
+  // height: 36px;
 
   @include breakpoint($large) {
     display: block;
@@ -82,8 +83,8 @@
   }
 
   img {
-    max-width: 175px;
-    border-radius: 50%;
+    max-width: 300px;
+    border-radius: 0%;
 
     @include breakpoint($large) {
       padding: 5px;
