--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,11 @@ layout: compress
     {% include masthead.html %}
     
     {{ content }}
-   <p style="text-align: center"><a href='https://clustrmaps.com/site/1bi3v'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=wcLPh2Blr8RX5HbWZ1csEr0gKeAAVoZgdFMZcZPNLPg'/></a></p>
-   
+   <p style="text-align: center">
+    <a href="https://clustrmaps.com/site/1btg8"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&cl=ffffff" /></a>
+    <!-- <a href='https://clustrmaps.com/site/1bi3v'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=wcLPh2Blr8RX5HbWZ1csEr0gKeAAVoZgdFMZcZPNLPg'/></a> -->
+  </p>
+   <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4"></script> -->
     <div class="page__footer">
    
       <footer>
