--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,10 +20,7 @@ layout: compress
     
     {{ content }}
    <p style="text-align: center">
-    <a href='https://clustrmaps.com/site/1btg8'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4'/></a>
-    <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4'></script> -->
-    <!-- <a href="https://clustrmaps.com/site/1btg8"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&cl=ffffff" /></a> -->
-    <!-- <a href='https://clustrmaps.com/site/1bi3v'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=wcLPh2Blr8RX5HbWZ1csEr0gKeAAVoZgdFMZcZPNLPg'/></a> -->
+    <a href="https://clustrmaps.com/site/1btg8"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&cl=ffffff" /></a>
   </p>
    <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4"></script> -->
     <div class="page__footer">
