--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@ layout: compress
     
     {{ content }}
    <p style="text-align: center">
-    <a href="https://clustrmaps.com/site/1btg8"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&cl=ffffff" /></a>
+    <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&cl=ffffff&w=a"></script>
+    <!-- <a href="https://clustrmaps.com/site/1btg8"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&cl=ffffff" /></a> -->
   </p>
    <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4"></script> -->
     <div class="page__footer">
