--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,8 +20,12 @@ layout: compress
     
     {{ content }}
    <!-- <p style="text-align: center"><a href='https://clustrmaps.com/site/1btg8'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=m&d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4'/></a></p> -->
-   <script type="text/javascript" src="//rf.revolvermaps.com/0/0/1.js?i=5k0hj246lho&amp;s=220&amp;m=0&amp;v=false&amp;r=false&amp;b=000000&amp;n=false&amp;c=ff0000" async="async"></script>
-    <div class="page__footer">
+   <!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/1.js?i=5k0hj246lho&amp;s=220&amp;m=0&amp;v=false&amp;r=false&amp;b=000000&amp;n=false&amp;c=ff0000" async="async"></script> -->
+   <p style="text-align: center">
+    <script type="text/javascript" src="//rf.revolvermaps.com/0/0/1.js?i=54xy9mwth36&amp;s=220&amp;m=0&amp;v=true&amp;r=false&amp;b=000000&amp;n=false&amp;c=ff0000" async="async"></script> 
+  </p>
+  
+  <div class="page__footer">
    
       <footer>
         {% include footer/custom.html %}
