--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,9 @@ layout: compress
     <!-- <script type="text/javascript" src="//rf.revolvermaps.com/0/0/1.js?i=54xy9mwth36&amp;s=220&amp;m=0&amp;v=true&amp;r=false&amp;b=000000&amp;n=false&amp;c=ff0000" async="async"></script>  -->
     <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4"></script> -->
     <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&co=2d78ad&ct=ffffff&cmo=3acc3a&cmn=ff5353'></script> -->
-    <!-- <a href='https://clustrmaps.com/site/1btg8'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&co=2d78ad&ct=ffffff'/></a> -->
+    <a href='https://clustrmaps.com/site/1btg8'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=uhqNc7XWbrkZa5u9iudpd6naMOb4hCuKBf0x1-oTqJ4&co=2d78ad&ct=ffffff'/></a>
     <!-- <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=qHxwyx2rxkFOKA5tDWCrxBf2c8GffJL1EogiVgWaWwo'></script>   -->
-    <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=qHxwyx2rxkFOKA5tDWCrxBf2c8GffJL1EogiVgWaWwo"></script>
+    <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=qHxwyx2rxkFOKA5tDWCrxBf2c8GffJL1EogiVgWaWwo"></script> -->
   </p>
   
   <div class="page__footer">
